--- a/analysis_inf_results.ipynb
+++ b/analysis_inf_results.ipynb
@@ -51,8 +51,8 @@
    "source": [
     "#model_size = 'small'\n",
     "model_size = 'large'\n",
-    "#input_path = f'final_inference_results_ten_percent_{model_size}.json'\n",
-    "input_path = f'final_inference_results_ten_percent_{model_size}.json'\n",
+    "#input_path = f'final_inference_results_ten_percent_{model_size}_c16.json'\n",
+    "input_path = f'final_inference_results_{model_size}_c16.json'\n",
     "with open(input_path, 'r') as f:\n",
     "    original_results = json.load(f)"
    ],
@@ -96,7 +96,7 @@
     "\n",
     "# Save the aggregated results to a new JSON file\n",
     "#output_path = f'aggregated_inference_results_ten_percent_{model_size}.json'\n",
-    "output_path = f'aggregated_inference_results{model_size}.json'\n",
+    "output_path = f'c16_aggregated_inference_results{model_size}.json'\n",
     "with open(output_path, 'w') as f:\n",
     "    json.dump(aggregated_results, f, indent=4)"
    ],
