--- a/sem_seg_inference.ipynb
+++ b/sem_seg_inference.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:38.792360Z",
-     "start_time": "2024-10-29T06:55:37.255395Z"
+     "end_time": "2025-03-12T09:48:16.061935Z",
+     "start_time": "2025-03-12T09:48:16.058693Z"
     }
    },
    "cell_type": "code",
@@ -14,20 +14,20 @@
    ],
    "id": "ad44b71e53f0368e",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:38.809119Z",
-     "start_time": "2024-10-29T06:55:38.804128Z"
+     "end_time": "2025-03-12T09:48:16.109393Z",
+     "start_time": "2025-03-12T09:48:16.105611Z"
     }
    },
    "cell_type": "code",
    "source": "small = False",
    "id": "54ce0899db9ce903",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 16
   },
   {
    "cell_type": "code",
@@ -35,18 +35,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:38.966231Z",
-     "start_time": "2024-10-29T06:55:38.953538Z"
+     "end_time": "2025-03-12T09:48:16.162019Z",
+     "start_time": "2025-03-12T09:48:16.157863Z"
     }
    },
    "source": [
     "output_root_dir = '' \n",
     "weights_root_dir = '/home/rob/Documents/3_projects/bench/_results/ten_percent'\n",
+    "#weights_root_dir = '/home/rob/Documents/3_projects/bench/_results/'\n",
+    "model_names = ['C16']\n",
     "\n",
-    "model_names = ['D4']\n",
     "#model_names = ['UNet_e2cnn', 'UNet_vanilla', 'C8', 'D4']\n",
-    "dataset_names = ['coco']\n",
-    "#dataset_names = ['coco', 'isaid']\n",
+    "#dataset_names = ['coco']\n",
+    "dataset_names = ['coco', 'isaid']\n",
     "final_epochs = {'isaid': 249, 'coco': 199}\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(device)"
@@ -60,13 +61,13 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:39.131559Z",
-     "start_time": "2024-10-29T06:55:39.122289Z"
+     "end_time": "2025-03-12T09:48:16.221569Z",
+     "start_time": "2025-03-12T09:48:16.210286Z"
     }
    },
    "cell_type": "code",
@@ -103,7 +104,7 @@
     "            \"UNet_e2cnn\": {\n",
     "                \"lbda\": 23,\n",
     "                \"bilinear\": True,\n",
-    "                \"gspace\": \"C4\",\n",
+    "                \"gspace\": \"C16\",\n",
     "                \"acti\": \"relu\",\n",
     "                \"acti_kwargs\": {\n",
     "                    \"inplace\": True\n",
@@ -126,6 +127,17 @@
     "                \"lbda\": 31,\n",
     "                \"bilinear\": True,\n",
     "                \"gspace\": \"D4\",\n",
+    "                \"acti\": \"relu\",\n",
+    "                \"acti_kwargs\": {\n",
+    "                    \"inplace\": True\n",
+    "                },\n",
+    "                \"kernel_size\": 9,\n",
+    "                \"mode\": \"pure\"\n",
+    "            },\n",
+    "            \"C16\": {\n",
+    "                \"lbda\": 1111,\n",
+    "                \"bilinear\": True,\n",
+    "                \"gspace\": \"C16\",\n",
     "                \"acti\": \"relu\",\n",
     "                \"acti_kwargs\": {\n",
     "                    \"inplace\": True\n",
@@ -198,6 +210,17 @@
     "                },\n",
     "                \"kernel_size\": 9,\n",
     "                \"mode\": \"pure\"\n",
+    "            },\n",
+    "            \"C16\": {\n",
+    "                \"lbda\": 1111,\n",
+    "                \"bilinear\": True,\n",
+    "                \"gspace\": \"C16\",\n",
+    "                \"acti\": \"relu\",\n",
+    "                \"acti_kwargs\": {\n",
+    "                    \"inplace\": True\n",
+    "                },\n",
+    "                \"kernel_size\": 9,\n",
+    "                \"mode\": \"pure\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -205,13 +228,13 @@
    ],
    "id": "9ed0bb1f2a582822",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:39.199879Z",
-     "start_time": "2024-10-29T06:55:39.190557Z"
+     "end_time": "2025-03-12T09:48:16.277219Z",
+     "start_time": "2025-03-12T09:48:16.265748Z"
     }
    },
    "cell_type": "code",
@@ -277,6 +300,17 @@
     "                },\n",
     "                \"kernel_size\": 9,\n",
     "                \"mode\": \"pure\"\n",
+    "            },\n",
+    "            \"C16\": {\n",
+    "                \"lbda\": 9.5,\n",
+    "                \"bilinear\": True,\n",
+    "                \"gspace\": \"C16\",\n",
+    "                \"acti\": \"relu\",\n",
+    "                \"acti_kwargs\": {\n",
+    "                    \"inplace\": True\n",
+    "                },\n",
+    "                \"kernel_size\": 9,\n",
+    "                \"mode\": \"pure\"\n",
     "            }\n",
     "        }\n",
     "    },\n",
@@ -343,6 +377,17 @@
     "                },\n",
     "                \"kernel_size\": 9,\n",
     "                \"mode\": \"pure\"\n",
+    "            },\n",
+    "            \"C16\": {\n",
+    "                \"lbda\": 9.5,\n",
+    "                \"bilinear\": True,\n",
+    "                \"gspace\": \"C16\",\n",
+    "                \"acti\": \"relu\",\n",
+    "                \"acti_kwargs\": {\n",
+    "                    \"inplace\": True\n",
+    "                },\n",
+    "                \"kernel_size\": 9,\n",
+    "                \"mode\": \"pure\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -350,13 +395,13 @@
    ],
    "id": "977f1dfdf9c38a7d",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:39.250845Z",
-     "start_time": "2024-10-29T06:55:39.245658Z"
+     "end_time": "2025-03-12T09:48:16.328027Z",
+     "start_time": "2025-03-12T09:48:16.324274Z"
     }
    },
    "cell_type": "code",
@@ -380,13 +425,13 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:40.244617Z",
-     "start_time": "2024-10-29T06:55:39.307813Z"
+     "end_time": "2025-03-12T09:48:16.386680Z",
+     "start_time": "2025-03-12T09:48:16.375423Z"
     }
    },
    "cell_type": "code",
@@ -406,7 +451,7 @@
     "    if model_name == 'UNet_vanilla':\n",
     "        acti = nn.ReLU\n",
     "        acti_kwargs = settings['models'][model_name]['acti_kwargs']\n",
-    "    elif model_name == 'UNet_e2cnn' or model_name == 'C8' or model_name == 'D4':\n",
+    "    elif model_name == 'UNet_e2cnn' or model_name == 'C8' or model_name == 'D4' or model_name == 'C16':\n",
     "        acti = e2_nn.ReLU\n",
     "        acti_kwargs = settings['models']['UNet_e2cnn']['acti_kwargs']\n",
     "\n",
@@ -418,7 +463,7 @@
     "        n_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "        return model, n_params\n",
     "\n",
-    "    elif model_name == 'UNet_e2cnn' or model_name == 'C8' or model_name == 'D4':\n",
+    "    elif model_name == 'UNet_e2cnn' or model_name == 'C8' or model_name == 'D4' or model_name == 'C16':\n",
     "        if model_name == 'UNet_e2cnn':\n",
     "            gspace = gspaces.Rot2dOnR2(N=4)\n",
     "            lbda = settings['models']['UNet_e2cnn']['lbda']\n",
@@ -434,8 +479,13 @@
     "            lbda = settings['models']['D4']['lbda']\n",
     "            print(f'lbda: {lbda}')\n",
     "            print(f'D4 sister')\n",
+    "        elif model_name == 'C16':\n",
+    "            gspace = gspaces.Rot2dOnR2(N=16)\n",
+    "            lbda = settings['models']['C16']['lbda']\n",
+    "            print(f'lbda: {lbda}')\n",
+    "            print(f'C16 father')\n",
     "        else:\n",
-    "            raise NotImplementedError(\"gspace should be C4, C8 or D4\")\n",
+    "            raise NotImplementedError(\"gspace should be C4, C8 or D4 or C16\")\n",
     "        model = UNet_e2cnn(settings['in_channels'], settings['n_classes'],\n",
     "                           lbda=lbda, acti=acti, \n",
     "                           acti_kwargs=acti_kwargs, bilinear=settings['models']['UNet_e2cnn']['bilinear'],\n",
@@ -446,13 +496,13 @@
    ],
    "id": "91bb8528a424bc44",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:41.004713Z",
-     "start_time": "2024-10-29T06:55:40.255944Z"
+     "end_time": "2025-03-12T09:48:16.457960Z",
+     "start_time": "2025-03-12T09:48:16.448398Z"
     }
    },
    "cell_type": "code",
@@ -500,26 +550,28 @@
    ],
    "id": "bd0d25045b96f5b5",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T06:55:41.018111Z",
-     "start_time": "2024-10-29T06:55:41.014902Z"
+     "end_time": "2025-03-12T09:48:16.511334Z",
+     "start_time": "2025-03-12T09:48:16.507738Z"
     }
    },
    "cell_type": "code",
    "source": "errors_list = []",
    "id": "7b9428bd22d9a0f9",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 23
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-10-29T08:34:03.474223Z",
-     "start_time": "2024-10-29T06:55:41.059230Z"
+     "start_time": "2025-03-12T09:48:16.569952Z"
     }
    },
    "cell_type": "code",
@@ -569,7 +621,8 @@
     "        \n",
     "        print(f'!!! Finished ---> Processing {dataset_name} with {model_name}')\n",
     "\n",
-    "json_name = 'final_inference_results_ten_percent_large_isaid_d4.json'\n",
+    "json_name = 'final_inference_results_ten_percent_large_c16.json'\n",
+    "#json_name = 'final_inference_results_large_c16.json'\n",
     "final_results_path = os.path.join(output_root_dir, json_name) \n",
     "with open(final_results_path, 'w') as f:\n",
     "    json.dump(results_dict, f, indent=4)"
@@ -583,14 +636,15 @@
       "***\n",
       "Processing coco\n",
       "***\n",
-      "Processing coco with D4\n",
+      "Processing coco with C16\n",
       "Processing fold 0\n",
+      "Percent subset is: 0.1\n",
       "loading annotations into memory...\n",
-      "Done (t=8.82s)\n",
+      "Done (t=8.83s)\n",
       "creating index...\n",
       "index created!\n",
-      "lbda: 6.65\n",
-      "D4 sister\n"
+      "lbda: 9.5\n",
+      "C16 father\n"
      ]
     },
     {
@@ -598,132 +652,19 @@
      "output_type": "stream",
      "text": [
       "/home/rob/Documents/Github/seg-equi-architectures/.venv/lib/python3.11/site-packages/e2cnn/nn/modules/r2_conv/basisexpansion_singleblock.py:80: UserWarning: indexing with dtype torch.uint8 is now deprecated, please use a dtype torch.bool instead. (Triggered internally at ../aten/src/ATen/native/IndexingUtils.h:27.)\n",
-      "  full_mask[mask] = norms.to(torch.uint8)\n",
-      "1479it [18:07,  1.36it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for fold 0: {'IoU': 0.09043493121862411, 'Dice': 0.12063877284526825, 'Pixel Accuracy': 0.5858597755432129, 'Mean Accuracy': 0.12831266224384308, 'Frequency Weighted IoU': 0.4504017233848572, 'Recall': 0.12831266224384308, 'Precision': 0.15115264058113098}\n",
-      "Processing fold 1\n",
-      "loading annotations into memory...\n",
-      "Done (t=8.74s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "lbda: 6.65\n",
-      "D4 sister\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1479it [18:07,  1.36it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for fold 1: {'IoU': 0.08945466578006744, 'Dice': 0.1192462295293808, 'Pixel Accuracy': 0.5843497514724731, 'Mean Accuracy': 0.12720130383968353, 'Frequency Weighted IoU': 0.4584929049015045, 'Recall': 0.12720130383968353, 'Precision': 0.14696092903614044}\n",
-      "Processing fold 2\n",
-      "loading annotations into memory...\n",
-      "Done (t=9.23s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "lbda: 6.65\n",
-      "D4 sister\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1479it [18:07,  1.36it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for fold 2: {'IoU': 0.08914632350206375, 'Dice': 0.11892568320035934, 'Pixel Accuracy': 0.5874505043029785, 'Mean Accuracy': 0.12624037265777588, 'Frequency Weighted IoU': 0.455716609954834, 'Recall': 0.12624037265777588, 'Precision': 0.14863309264183044}\n",
-      "Processing fold 3\n",
-      "loading annotations into memory...\n",
-      "Done (t=10.51s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "lbda: 6.65\n",
-      "D4 sister\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1479it [18:07,  1.36it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for fold 3: {'IoU': 0.0920352190732956, 'Dice': 0.12237709015607834, 'Pixel Accuracy': 0.5860458016395569, 'Mean Accuracy': 0.13090412318706512, 'Frequency Weighted IoU': 0.45700496435165405, 'Recall': 0.13090412318706512, 'Precision': 0.15281780064105988}\n",
-      "Processing fold 4\n",
-      "loading annotations into memory...\n",
-      "Done (t=8.59s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "lbda: 6.65\n",
-      "D4 sister\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1479it [18:07,  1.36it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for fold 4: {'IoU': 0.09182731807231903, 'Dice': 0.12218154966831207, 'Pixel Accuracy': 0.5922646522521973, 'Mean Accuracy': 0.13032254576683044, 'Frequency Weighted IoU': 0.4575920104980469, 'Recall': 0.13032254576683044, 'Precision': 0.15268298983573914}\n",
-      "!!! Finished ---> Processing coco with D4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "  full_mask[mask] = norms.to(torch.uint8)\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-29T08:34:04.598760Z",
-     "start_time": "2024-10-29T08:34:04.595621Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "print(errors_list)",
    "id": "e57db25075df5442",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "execution_count": 11
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
