--- a/src/Benchmarks/analysis/4_plots_perf.ipynb
+++ b/src/Benchmarks/analysis/4_plots_perf.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-29T16:20:21.937224Z",
-     "start_time": "2024-10-29T16:20:21.934305Z"
+     "end_time": "2025-03-12T09:43:15.532546Z",
+     "start_time": "2025-03-12T09:43:15.529904Z"
     }
    },
    "source": [
@@ -19,8 +19,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T16:20:22.743871Z",
-     "start_time": "2024-10-29T16:20:21.981605Z"
+     "end_time": "2025-03-12T09:43:15.798457Z",
+     "start_time": "2025-03-12T09:43:15.575202Z"
     }
    },
    "cell_type": "code",
@@ -33,7 +33,7 @@
     "linestyles = ['-', '--', '-.', ':']\n",
     "markers = ['o', 's', '^', 'd'] \n",
     "selected_font_size = 22\n",
-    "output_dir_base_path = f'/home/rob/Documents/3_projects/bench/analysis/graphs/'\n",
+    "output_dir_base_path = f'/home/rob/Documents/3_projects/bench/analysis_tmlr_updates/graphs/'\n",
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "def construct_path_from_parent(root_dir, subdir_list):\n",
@@ -75,7 +75,7 @@
     "# Load data for both small and large models in both setups\n",
     "model_size_small = 'small_models'\n",
     "model_size_large = 'large_models'\n",
-    "model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]\n",
+    "model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\", \"C16\"]\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
     "\n",
     "#dataset_name = \"kvasir\"\n",
@@ -119,13 +119,13 @@
    ],
    "id": "aa9ca51b95966c4d",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T16:20:24.880836Z",
-     "start_time": "2024-10-29T16:20:22.857204Z"
+     "end_time": "2025-03-12T09:43:17.813648Z",
+     "start_time": "2025-03-12T09:43:15.810637Z"
     }
    },
    "cell_type": "code",
@@ -201,13 +201,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T16:20:24.907408Z",
-     "start_time": "2024-10-29T16:20:24.905183Z"
+     "end_time": "2025-03-12T09:43:17.841647Z",
+     "start_time": "2025-03-12T09:43:17.839498Z"
     }
    },
    "cell_type": "code",
