--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:25.920290Z",
-     "start_time": "2024-10-30T10:47:25.306825Z"
+     "end_time": "2025-03-12T09:29:45.977716Z",
+     "start_time": "2025-03-12T09:29:45.974568Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 74
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:25.938956Z",
-     "start_time": "2024-10-30T10:47:25.935603Z"
+     "end_time": "2025-03-12T09:29:46.025485Z",
+     "start_time": "2025-03-12T09:29:46.022012Z"
     }
    },
    "cell_type": "code",
@@ -45,25 +45,25 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 75
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.098016Z",
-     "start_time": "2024-10-30T10:47:26.093684Z"
+     "end_time": "2025-03-12T09:29:46.073557Z",
+     "start_time": "2025-03-12T09:29:46.068956Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "root_dir = '/home/rob/Documents/3_projects/bench/_results/ten_percent/large_models'\n",
-    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/ten_percent/large_models'\n",
+    "root_dir = '/home/rob/Documents/3_projects/bench/_results/large_models'\n",
+    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis_tmlr_updates/large_models'\n",
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "current_dir = os.getcwd()\n",
     "#dataset_name = \"kvasir\"\n",
-    "#dataset_name = \"NucleiSeg\"\n",
-    "dataset_name = \"URDE\"\n",
+    "dataset_name = \"NucleiSeg\"\n",
+    "#dataset_name = \"URDE\"\n",
     "#dataset_name = \"isaid\"\n",
     "#dataset_name = \"coco\"\n",
     "\n",
@@ -72,27 +72,27 @@
     "\n",
     "if dataset_name in [\"kvasir\", \"NucleiSeg\", \"URDE\"]:\n",
     "    perf_metrics = ['dice_score', 'IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']\n",
-    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]\n",
+    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\", \"C16\"]\n",
     "else:\n",
     "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric', 'fw_iou', 'pacc']\n",
-    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]"
+    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\", \"C16\"]"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 76
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.149318Z",
-     "start_time": "2024-10-30T10:47:26.140911Z"
+     "end_time": "2025-03-12T09:29:46.123331Z",
+     "start_time": "2025-03-12T09:29:46.117247Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def get_all_metrics(summary_loc: str, fold_nb: int, result_dict: dict, \n",
     "                     perf_metrics: list, criteria: str, num_params: int, \n",
-    "                     select_best: bool = False) -> int:\n",
+    "                     select_best: bool = True) -> int:\n",
     "    with open(summary_loc) as file:\n",
     "        data = json.load(file)\n",
     "        \n",
@@ -129,13 +129,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 77
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.214780Z",
-     "start_time": "2024-10-30T10:47:26.209046Z"
+     "end_time": "2025-03-12T09:29:46.172099Z",
+     "start_time": "2025-03-12T09:29:46.166781Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +156,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 78
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.369455Z",
-     "start_time": "2024-10-30T10:47:26.279413Z"
+     "end_time": "2025-03-12T09:29:46.270041Z",
+     "start_time": "2025-03-12T09:29:46.216540Z"
     }
    },
    "cell_type": "code",
@@ -173,7 +173,7 @@
     "    \n",
     "    for fold in folds:\n",
     "        summary_loc = build_path(dataset_name, model_name, fold, root_dir=root_dir)\n",
-    "        num_params = get_all_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params, select_best=False)\n",
+    "        num_params = get_all_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params, select_best=True)\n",
     "        \n",
     "    results = {'num_params': num_params}\n",
     "\n",
@@ -201,36 +201,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/UNet_e2cnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C8/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C8/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C8/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C8/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C8/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/D4/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/D4/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/D4/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/D4/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/D4/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C16/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C16/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C16/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C16/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/NucleiSeg/C16/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 79
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.465267Z",
-     "start_time": "2024-10-30T10:47:26.462987Z"
+     "end_time": "2025-03-12T09:29:46.295242Z",
+     "start_time": "2025-03-12T09:29:46.292115Z"
     }
    },
    "cell_type": "code",
