--- a/src/Benchmarks/analysis/step_1-ten_pc_perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-ten_pc_perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:48:01.976440Z",
-     "start_time": "2024-10-30T10:48:01.972581Z"
+     "end_time": "2025-03-12T09:39:24.168637Z",
+     "start_time": "2025-03-12T09:39:24.164644Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:48:02.020424Z",
-     "start_time": "2024-10-30T10:48:02.017116Z"
+     "end_time": "2025-03-12T09:39:24.215569Z",
+     "start_time": "2025-03-12T09:39:24.212077Z"
     }
    },
    "cell_type": "code",
@@ -45,28 +45,28 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:48:02.065226Z",
-     "start_time": "2024-10-30T10:48:02.059967Z"
+     "end_time": "2025-03-12T09:39:24.263952Z",
+     "start_time": "2025-03-12T09:39:24.258720Z"
     }
    },
    "cell_type": "code",
    "source": [
     "root_dir = '/home/rob/Documents/3_projects/bench/_results/ten_percent/large_models'\n",
-    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/ten_percent/large_models'\n",
+    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis_tmlr_updates/ten_percent/large_models'\n",
     "\n",
     "#root_dir = '/home/rob/Documents/3_projects/bench/_results/ten_percent/large_models'\n",
-    "#output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/ten_percent/large_models'\n",
+    "#output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis_tmlr_updates/ten_percent/large_models'\n",
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "current_dir = os.getcwd()\n",
-    "#dataset_name = \"kvasir\"\n",
+    "dataset_name = \"kvasir\"\n",
     "#dataset_name = \"NucleiSeg\"\n",
-    "dataset_name = \"URDE\"\n",
+    "#dataset_name = \"URDE\"\n",
     "#dataset_name = \"isaid\"\n",
     "#dataset_name = \"coco\"\n",
     "\n",
@@ -75,20 +75,20 @@
     "\n",
     "if dataset_name in [\"kvasir\", \"NucleiSeg\", \"URDE\"]:\n",
     "    perf_metrics = ['dice_score', 'IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']\n",
-    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]\n",
+    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\", \"C16\"]\n",
     "else:\n",
     "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric', 'fw_iou', 'pacc']\n",
-    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]"
+    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\", \"C16\"]"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:48:02.123058Z",
-     "start_time": "2024-10-30T10:48:02.113423Z"
+     "end_time": "2025-03-12T09:39:24.315333Z",
+     "start_time": "2025-03-12T09:39:24.308759Z"
     }
    },
    "cell_type": "code",
@@ -132,13 +132,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:48:02.171222Z",
-     "start_time": "2024-10-30T10:48:02.166871Z"
+     "end_time": "2025-03-12T09:39:24.364888Z",
+     "start_time": "2025-03-12T09:39:24.360743Z"
     }
    },
    "cell_type": "code",
@@ -159,13 +159,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:48:02.296861Z",
-     "start_time": "2024-10-30T10:48:02.217019Z"
+     "end_time": "2025-03-12T09:39:24.463626Z",
+     "start_time": "2025-03-12T09:39:24.409392Z"
     }
    },
    "cell_type": "code",
@@ -204,36 +204,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/UNet_e2cnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/C8/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/URDE/D4/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/UNet_e2cnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C8/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C8/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C8/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C8/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C8/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/D4/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/D4/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/D4/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/D4/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/D4/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C16/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C16/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C16/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C16/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models/kvasir/C16/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:48:02.312708Z",
-     "start_time": "2024-10-30T10:48:02.309191Z"
+     "end_time": "2025-03-12T09:39:24.488033Z",
+     "start_time": "2025-03-12T09:39:24.485659Z"
     }
    },
    "cell_type": "code",
