--- a/sem_seg_inference.ipynb
+++ b/sem_seg_inference.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.061935Z",
-     "start_time": "2025-03-12T09:48:16.058693Z"
+     "end_time": "2025-03-12T10:11:48.239333Z",
+     "start_time": "2025-03-12T10:11:46.950529Z"
     }
    },
    "cell_type": "code",
@@ -14,20 +14,20 @@
    ],
    "id": "ad44b71e53f0368e",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.109393Z",
-     "start_time": "2025-03-12T09:48:16.105611Z"
+     "end_time": "2025-03-12T10:11:48.248750Z",
+     "start_time": "2025-03-12T10:11:48.245506Z"
     }
    },
    "cell_type": "code",
    "source": "small = False",
    "id": "54ce0899db9ce903",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -35,8 +35,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.162019Z",
-     "start_time": "2025-03-12T09:48:16.157863Z"
+     "end_time": "2025-03-12T10:11:48.323798Z",
+     "start_time": "2025-03-12T10:11:48.311203Z"
     }
    },
    "source": [
@@ -61,13 +61,13 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.221569Z",
-     "start_time": "2025-03-12T09:48:16.210286Z"
+     "end_time": "2025-03-12T10:11:48.371974Z",
+     "start_time": "2025-03-12T10:11:48.360008Z"
     }
    },
    "cell_type": "code",
@@ -89,7 +89,7 @@
     "            \"rot\": True,\n",
     "            \"Normalize\": [[0.5, 0.5, 0.5], [0.5, 0.5, 0.5]]\n",
     "        },\n",
-    "        \"batch_size\": 16,\n",
+    "        \"batch_size\": 4,\n",
     "        \"models\": {\n",
     "            \"input_size\": 224,\n",
     "            \"UNet_vanilla\": {\n",
@@ -157,7 +157,7 @@
     "        \"num_workers\": 32,\n",
     "        \"shuffle\": True,\n",
     "        \"mask_type\": \"multiclass_semantic\",\n",
-    "        \"batch_size\": 16,\n",
+    "        \"batch_size\": 4,\n",
     "        \"transforms\": {\n",
     "            \"Resize\": [224, 224],\n",
     "            \"RandomCrop\": None,\n",
@@ -228,13 +228,13 @@
    ],
    "id": "9ed0bb1f2a582822",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.277219Z",
-     "start_time": "2025-03-12T09:48:16.265748Z"
+     "end_time": "2025-03-12T10:11:48.431752Z",
+     "start_time": "2025-03-12T10:11:48.422232Z"
     }
    },
    "cell_type": "code",
@@ -249,7 +249,7 @@
     "        \"shuffle\": True,\n",
     "        \"mask_type\": \"multiclass_semantic\",\n",
     "        \"num_workers\": 32,\n",
-    "        \"batch_size\": 16,\n",
+    "        \"batch_size\": 4,\n",
     "        \"transforms\": {\n",
     "            \"Resize\": [224, 224],\n",
     "            \"RandomCrop\": None,\n",
@@ -331,7 +331,7 @@
     "            \"Normalize\": [[0.5, 0.5, 0.5], [0.5, 0.5, 0.5]]\n",
     "        },\n",
     "        \"mask_type\": \"multiclass_semantic\",\n",
-    "        \"batch_size\": 16,\n",
+    "        \"batch_size\": 4,\n",
     "        \"models\": {\n",
     "            \"input_size\": 224,\n",
     "            \"lr\": 0.001,\n",
@@ -395,13 +395,13 @@
    ],
    "id": "977f1dfdf9c38a7d",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.328027Z",
-     "start_time": "2025-03-12T09:48:16.324274Z"
+     "end_time": "2025-03-12T10:11:48.468782Z",
+     "start_time": "2025-03-12T10:11:48.464855Z"
     }
    },
    "cell_type": "code",
@@ -413,7 +413,9 @@
     "else:\n",
     "    print('large')\n",
     "    settings = settings_large\n",
-    "    weights_loc = os.path.join(weights_root_dir, 'large_models')"
+    "    weights_loc = os.path.join(weights_root_dir, 'large_models')\n",
+    "\n",
+    "print(f'weights loc is : {weights_loc}')"
    ],
    "id": "783b2624d86c1c72",
    "outputs": [
@@ -421,17 +423,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "large\n"
+      "large\n",
+      "weights loc is : /home/rob/Documents/3_projects/bench/_results/ten_percent/large_models\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.386680Z",
-     "start_time": "2025-03-12T09:48:16.375423Z"
+     "end_time": "2025-03-12T10:11:49.200849Z",
+     "start_time": "2025-03-12T10:11:48.522093Z"
     }
    },
    "cell_type": "code",
@@ -496,13 +499,13 @@
    ],
    "id": "91bb8528a424bc44",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.457960Z",
-     "start_time": "2025-03-12T09:48:16.448398Z"
+     "end_time": "2025-03-12T10:11:49.835331Z",
+     "start_time": "2025-03-12T10:11:49.208646Z"
     }
    },
    "cell_type": "code",
@@ -550,20 +553,20 @@
    ],
    "id": "bd0d25045b96f5b5",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T09:48:16.511334Z",
-     "start_time": "2025-03-12T09:48:16.507738Z"
+     "end_time": "2025-03-12T10:11:49.847992Z",
+     "start_time": "2025-03-12T10:11:49.845613Z"
     }
    },
    "cell_type": "code",
    "source": "errors_list = []",
    "id": "7b9428bd22d9a0f9",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 9
   },
   {
    "metadata": {
@@ -571,7 +574,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-03-12T09:48:16.569952Z"
+     "start_time": "2025-03-12T10:11:49.888107Z"
     }
    },
    "cell_type": "code",
@@ -602,9 +605,12 @@
     "        \n",
     "            checkpoint_path = os.path.join(weights_loc, dataset_name, model_name, f'fold_{fold}',\n",
     "                                           'checkpoint_epoch_{}.pth'.format(final_epochs[dataset_name])) \n",
-    "            \n",
+    "            print(f'Checkpoint path is: {checkpoint_path}')\n",
     "            try:\n",
     "                checkpoint = torch.load(checkpoint_path, map_location=device)\n",
+    "                # print(type(checkpoint))\n",
+    "                # if isinstance(checkpoint, dict):\n",
+    "                #     print(checkpoint.keys())\n",
     "                model.load_state_dict(checkpoint)\n",
     "                model.eval() \n",
     "                \n",
@@ -617,6 +623,13 @@
     "            except (FileNotFoundError, RuntimeError) as e:\n",
     "                check_fail = f'fold_{fold}&{model_name}&{dataset_name}'\n",
     "                print(f'!!! Could not load {check_fail}')\n",
+    "                print(f'Error details: {str(e)}')\n",
+    "                errors_list.append(check_fail)\n",
+    "                print(f'!!! Could not load {check_fail}')\n",
+    "                print(f'Error type: {type(e).__name__}')\n",
+    "                print(f'Error message: {str(e)}')\n",
+    "                import traceback\n",
+    "                traceback.print_exc()\n",
     "                errors_list.append(check_fail)\n",
     "        \n",
     "        print(f'!!! Finished ---> Processing {dataset_name} with {model_name}')\n",
@@ -640,7 +653,7 @@
       "Processing fold 0\n",
       "Percent subset is: 0.1\n",
       "loading annotations into memory...\n",
-      "Done (t=8.83s)\n",
+      "Done (t=8.72s)\n",
       "creating index...\n",
       "index created!\n",
       "lbda: 9.5\n",
@@ -663,6 +676,14 @@
    "cell_type": "code",
    "source": "print(errors_list)",
    "id": "e57db25075df5442",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "72b4b91a5cefa91c",
    "outputs": [],
    "execution_count": null
   }
